@@ -1,1 +1,2 @@
 DIST cc-mode-1.69-pkg.tar.gz 770906 SHA256 98c2735df92d712cd30782c389f75e5c1dad917d1983a10a66ca2cca060a9dac SHA512 5507d264d20cf1ee1b7d547ef64d55f3ba38f7dcb60ecec3e46cb78ce125c4a9b2cdce64e9150afa7e0755e7bec1bea6706f0d4c69b3890bdcdf36b63e696ae1 WHIRLPOOL 0f07ab21eb35394d2b7024d22f79ed2c03a695082bf5da371fe69df261c4dfc3e40c8223ac8d2b01ef121e11c6fec8f17625483b601116257f206e3eecbd3b34
+DIST cc-mode-1.70-pkg.tar.gz 772196 SHA256 7f10114f94273113bb4f429fc997a7ccc6e1e0e6b646746cc1bf6c1b30ccafb1 SHA512 ba60a2d4f84a0340b6cb3b824052d8f9d14610036e611936918a7587422b823cdb396cf7489a06cc5e46806ce55ea5ab211bdc988d847883239b17d07ba37f45 WHIRLPOOL 04428287cc21f29c36bd7e4fc20798c9270e4e2879eaa6a11c3d1a7829c589e9b875cdd02b5317726a23de2946689c02cc9934009f1082d9d64a319776869068
